@@ -4,6 +4,8 @@
         * Changed include order in mm.c because of eaccelerator.h include in debug.h 
         * Fixed a nullpointer dereference in some special cases in ea_restore.c:509
         * Always compile a ea_debug_error message in ea_restore.c
+        * Cleanup: Removed some commented out code, changed some debug statements,
+            reordered some conditional includes to reduce ifdef statements
 
 2007-01-29  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
 
